add usercontroller et videocontroller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,32 @@
 spring.application.name=en_avant_toutes
-
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/dbenavanttoutes
 spring.datasource.username=postgres
 spring.datasource.password=123456
-spring.datasource.schema=classpath:/schema.sql
-spring.jpa.open-in-view=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.schema=classpath:/schema.sql
+spring.jpa.open-in-view=true
+server.port=8080
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+server.tomcat.max-http-post-size=20971520
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=false
+
+spring.resources.static-locations=classpath:/static/assets/video/, file:./src/main/resources/static/assets/video/
+video.upload.path=src/main/resources/static/assets/video
+
+
+
+
+
+
+
+
+
+
