register auth reussi et categorie reussi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=en_avant_toutes
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/dbenavanttoutes
@@ -17,6 +17,11 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.http=DEBUG
+
+
 
 spring.resources.static-locations=classpath:/static/assets/video/, file:./src/main/resources/static/assets/video/
 video.upload.path=src/main/resources/static/assets/video
