--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ logging.level.org.springframework.http=DEBUG
 
 
 
-spring.resources.static-locations=classpath:/static/assets/video/, file:./src/main/resources/static/assets/video/
+spring.resources.static-locations=classpath:/static/, file:./src/main/resources/static/
 video.upload.path=src/main/resources/static/assets/video
 
 
