modifier video pour reserver mocal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,10 @@ logging.level.org.springframework.http=DEBUG
 
 
 
-spring.resources.static-locations=classpath:/static/, file:./src/main/resources/static/
+spring.resources.static-locations=classpath:/static/, file:./src/main/resources/static/, file:/C:/video/
 video.upload.path=src/main/resources/static/assets/video
+
+video_static.upload.path = C:/video/
 
 
 
